--- a/result.tex
+++ b/result.tex
@@ -1,4 +1,11 @@
 \label{section_result}
+
+\paragraph{Antiresonances and problems with local effective parameters}
+%% TODO add to the first Mie resonance discussed
+\add{Anti-resonant response of resonant inclusions \cite{wallen2010}: "antiresonance "may not" come from periodicity, as it is also observed in random structures";
+Restoring the physical meaning of MM cosstitutive parameters \cite{alu2010}}
+
+
 \section{Dielectric slab} % references to ->%{{{
 The structure composed of alternating dielectric layers, effectively a one-dimensional photonic crystal, has been investigated thoroughly in the previous decades. We review it mostly for comparison with the structures presented in the following. 
 
