--- a/conclusion.tex
+++ b/conclusion.tex
@@ -40,6 +40,9 @@ that is, new theory motivated by the metamaterial research may find its applicat
 One example may be the theory of strongly hyperbolic media, which turns out to be fundamental for electrodynamics in extremely strong magnetic fields \cite{Smolyaninov2011}.
 }
 
+Fundamental issues have to be resolved in the MM and PhC field are
+losses
+
 \paragraph{TiO$_{2}$ resonators}
 \add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated, that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
 
